--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>de.juliansauer</groupId>
     <artifactId>TSSpotifyVote</artifactId>
     <version>0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
@@ -21,6 +22,10 @@
         </dependency>
     </dependencies>
 
+    <properties>
+        <mainClass>plugin.Main</mainClass>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
@@ -29,12 +34,12 @@
                 <version>1.5.0</version>
                 <executions>
                     <execution>
-                        <phase>test</phase>
+                        <phase>install</phase>
                         <goals>
                             <goal>java</goal>
                         </goals>
                         <configuration>
-                            <mainClass>plugin.Main</mainClass>
+                            <mainClass>${mainClass}</mainClass>
                         </configuration>
                     </execution>
                 </executions>
@@ -46,6 +51,28 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <archive>
+                                <manifest>
+                                    <mainClass>${mainClass}</mainClass>
+                                </manifest>
+                            </archive>
+                            <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                            </descriptorRefs>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
